Changing & Adding Files
Added Stage 1 Map, and tried to render with no success.

Render Issue expected to be solved at next commit.

--- a/Game-Folder&Files/Motor2D/Motor2D.vcxproj
+++ b/Game-Folder&Files/Motor2D/Motor2D.vcxproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Game\maps\hello2.tmx" />
+    <None Include="..\Game\maps\Stage1.tmx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
