--- a/Game-Folder&Files/Motor2D/Motor2D.vcxproj.filters
+++ b/Game-Folder&Files/Motor2D/Motor2D.vcxproj.filters
@@ -112,4 +112,8 @@
     <None Include="..\Game\maps\hello2.tmx" />
     <None Include="..\Game\maps\Stage1.tmx" />
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\Game\save_game.xml" />
+    <Xml Include="..\Game\config.xml" />
+  </ItemGroup>
 </Project>
