--- a/Game-Folder&Files/Motor2D/Motor2D.vcxproj
+++ b/Game-Folder&Files/Motor2D/Motor2D.vcxproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <None Include="..\Game\maps\hello2.tmx" />
     <None Include="..\Game\maps\Stage1.tmx" />
+    <None Include="..\Game\maps\stage_1.tmx" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="..\Game\config.xml">
