--- a/Game-Folder&Files/Motor2D/Motor2D.vcxproj
+++ b/Game-Folder&Files/Motor2D/Motor2D.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
     <ClInclude Include="j1Collision.h" />
     <ClInclude Include="j1FadeToBlack.h" />
     <ClInclude Include="j1Map.h" />
