--- a/Game-Folder&Files/Motor2D/Motor2D.vcxproj.filters
+++ b/Game-Folder&Files/Motor2D/Motor2D.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="j1FadeToBlack.h">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
+    <ClInclude Include="Animation.h">
+      <Filter>Desenvolupament  ========\Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Programacio 2 ===========">
