--- a/Game-Folder&Files/Motor2D/Motor2D.vcxproj
+++ b/Game-Folder&Files/Motor2D/Motor2D.vcxproj
@@ -125,6 +125,7 @@
     <Xml Include="..\Game\config.xml">
       <SubType>Designer</SubType>
     </Xml>
+    <Xml Include="..\Game\player.xml" />
     <Xml Include="..\Game\save_game.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
