Player bug partly solved
Now the player character is not tilting
But there still a bug related to the movement and colliders

--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -124,6 +124,12 @@
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
     <ClInclude Include="j1SceneManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\Game\config.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Game\maps\MapScene1.tmx" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
