--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j1FlyingEnemy.cpp" />
     <ClCompile Include="j1CollisionManager.cpp" />
     <ClCompile Include="j1Entity.cpp" />
     <ClCompile Include="j1EntityManager.cpp" />
@@ -97,6 +98,7 @@
     <ClCompile Include="j1SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="j1FlyingEnemy.h" />
     <ClInclude Include="j1Animation.h" />
     <ClInclude Include="j1CollisionManager.h" />
     <ClInclude Include="j1Entity.h" />
