--- a/Motor2D/Motor2D.vcxproj
+++ b/Motor2D/Motor2D.vcxproj
@@ -76,10 +76,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j1Enemy.cpp" />
     <ClCompile Include="j1FlyingEnemy.cpp" />
     <ClCompile Include="j1CollisionManager.cpp" />
     <ClCompile Include="j1Entity.cpp" />
     <ClCompile Include="j1EntityManager.cpp" />
+    <ClCompile Include="j1GroundEnemy.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
     <ClCompile Include="j1Audio.cpp" />
@@ -98,11 +100,13 @@
     <ClCompile Include="j1SceneManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="j1Enemy.h" />
     <ClInclude Include="j1FlyingEnemy.h" />
     <ClInclude Include="j1Animation.h" />
     <ClInclude Include="j1CollisionManager.h" />
     <ClInclude Include="j1Entity.h" />
     <ClInclude Include="j1EntityManager.h" />
+    <ClInclude Include="j1GroundEnemy.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1PerfTimer.h" />
